--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -7,3 +7,7 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   padding: 1em;
 }
+
+.purchase-card > .show-grid{
+  padding: 1.5em;
+}
